12/03/2023:
	- Re-aligned metadata field names to Dublin Core norms and changed encoding to plain text for non-core IIP metadata
	  requests - allows requests like OBJ=description or OBJ=xmp. Also added new "metadata" argument to OBJ command
	  (OBJ=metadata) to export all available metadata in JSON format


09/03/2023:
	- Added ability to handle TIFF files with differing tile sizes at each resolution level.
	- Moved tile cropping out of TileManager and directly into RawTile class.


03/03/2023:
	- Added Compressor constructer with inline initialization and checks in JPEG and PNG classes for whether DPI is set


02/03/2023:
	- Fixed free space calculation in JPEGCompressor causing corruption when tile sizes are very small and the working
	  buffer is too small


07/01/2023:
	- Added extra Kakadu version check as the metadata handling code does not compile with old versions of Kakadu


12/01/2023:
	- Fixed typo in configure script (https://github.com/ruven/iipsrv/issues/249). Thanks @irv


03/01/2023:
	- Fixed potential integer overflow errors in View.cc and CVT.cc


07/12/2022:
	- Added IIIF profile with appropriate version number to content type responses for info.json


19/11/2022:
	- Fixed typo in TileManager getRegion() function which was preventing bit depth and number of channels being
	  correctly assigned to output region in some cases


16/11/2022:
	- Changes to TPTImage, KakaduImage and OpenJPEGImage to ensure image width and height vectors are empty in
	  loadImageInfo(). This fixes problem when a source image is modified and loadImageInfo() is called specifically.
	  Also modified FIF and TileManager classes to take into account any differences between timestamps and not just
	  when a timestamp is more recent.


04/10/2022:
	- Modification to TPTImage's getTile() and TileManager's getRegion() to handle images with different numbers of
	  channels or bits within the same image sequence or stack.